# Jobs-hunt-agent

./: README.md
jobs-hunt-agent/: CLAUDE.md  DESIGN.md  DEVLOG.md  PROGRESS.md  README.md  config.yaml  main.py  pyproject.toml  verify_phase1.py  verify_phase2.py  verify_phase3.py
jobs-hunt-agent/agents/: applicator.py  crawler.py  filter.py  orchestrator.py  resume_tailor.py
jobs-hunt-agent/data/: base_resume.md  jobs.db
jobs-hunt-agent/data/outputs/: test_phase4_verify_20260327.docx  test_phase4_verify_20260327.md
jobs-hunt-agent/models/: agent_state.py  config_schema.py  job_posting.py
jobs-hunt-agent/prompts/: apply_prompt.py  filter_prompt.py  tailor_prompt.py
jobs-hunt-agent/tests/: test_applicator.py  test_crawler.py  test_filter.py  test_orchestrator.py  test_resume_tailor.py
jobs-hunt-agent/tools/: browser.py  db.py  llm_client.py  resume_parser.py
